api 수정
